// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/input-number/demo/basic.md correctly 1`] = `
<div
  class="ant-input-number"
>
  <div
    class="ant-input-number-handler-wrap"
  >
    <span
      aria-label="Increase Value"
      class="ant-input-number-handler ant-input-number-handler-up"
      role="button"
      unselectable="unselectable"
    >
      <span
        aria-label="up"
        class="anticon anticon-up ant-input-number-handler-up-inner"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="up"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-label="Decrease Value"
      class="ant-input-number-handler ant-input-number-handler-down"
      role="button"
      unselectable="unselectable"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-input-number-handler-down-inner"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-input-number-input-wrap"
  >
    <input
      aria-valuemax="10"
      aria-valuemin="1"
      aria-valuenow="3"
      autocomplete="off"
      class="ant-input-number-input"
      max="10"
      min="1"
      role="spinbutton"
      step="1"
      value="3"
    />
  </div>
</div>
`;

exports[`renders ./components/input-number/demo/digit.md correctly 1`] = `
<div
  class="ant-input-number"
>
  <div
    class="ant-input-number-handler-wrap"
  >
    <span
      aria-label="Increase Value"
      class="ant-input-number-handler ant-input-number-handler-up"
      role="button"
      unselectable="unselectable"
    >
      <span
        aria-label="up"
        class="anticon anticon-up ant-input-number-handler-up-inner"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="up"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
          />
        </svg>
      </span>
    </span>
    <span
      aria-label="Decrease Value"
      class="ant-input-number-handler ant-input-number-handler-down"
      role="button"
      unselectable="unselectable"
    >
      <span
        aria-label="down"
        class="anticon anticon-down ant-input-number-handler-down-inner"
        role="img"
      >
        <svg
          aria-hidden="true"
          class=""
          data-icon="down"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
          />
        </svg>
      </span>
    </span>
  </div>
  <div
    class="ant-input-number-input-wrap"
  >
    <input
      aria-valuemax="10"
      aria-valuemin="0"
      autocomplete="off"
      class="ant-input-number-input"
      max="10"
      min="0"
      role="spinbutton"
      step="0.1"
      value=""
    />
  </div>
</div>
`;

exports[`renders ./components/input-number/demo/disabled.md correctly 1`] = `
Array [
  <div
    class="ant-input-number ant-input-number-disabled"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="true"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up ant-input-number-handler-up-disabled"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-disabled="true"
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down ant-input-number-handler-down-disabled"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="10"
        aria-valuemin="1"
        aria-valuenow="3"
        autocomplete="off"
        class="ant-input-number-input"
        disabled=""
        max="10"
        min="1"
        role="spinbutton"
        step="1"
        value="3"
      />
    </div>
  </div>,
  <div
    style="margin-top:20px"
  >
    <button
      class="ant-btn ant-btn-primary"
      type="button"
    >
      <span>
        Toggle disabled
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/input-number/demo/formatter.md correctly 1`] = `
Array [
  <div
    class="ant-input-number"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemin="-9007199254740991"
        aria-valuenow="1000"
        autocomplete="off"
        class="ant-input-number-input"
        min="-9007199254740991"
        role="spinbutton"
        step="1"
        value="$ 1,000"
      />
    </div>
  </div>,
  <div
    class="ant-input-number"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-disabled="true"
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up ant-input-number-handler-up-disabled"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="100"
        autocomplete="off"
        class="ant-input-number-input"
        max="100"
        min="0"
        role="spinbutton"
        step="1"
        value="100%"
      />
    </div>
  </div>,
]
`;

exports[`renders ./components/input-number/demo/size.md correctly 1`] = `
<div
  class="site-input-number-wrapper"
>
  <div
    class="ant-input-number ant-input-number-lg"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100000"
        aria-valuemin="1"
        aria-valuenow="3"
        autocomplete="off"
        class="ant-input-number-input"
        max="100000"
        min="1"
        role="spinbutton"
        step="1"
        value="3"
      />
    </div>
  </div>
  <div
    class="ant-input-number"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100000"
        aria-valuemin="1"
        aria-valuenow="3"
        autocomplete="off"
        class="ant-input-number-input"
        max="100000"
        min="1"
        role="spinbutton"
        step="1"
        value="3"
      />
    </div>
  </div>
  <div
    class="ant-input-number ant-input-number-sm"
  >
    <div
      class="ant-input-number-handler-wrap"
    >
      <span
        aria-label="Increase Value"
        class="ant-input-number-handler ant-input-number-handler-up"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="up"
          class="anticon anticon-up ant-input-number-handler-up-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="up"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
            />
          </svg>
        </span>
      </span>
      <span
        aria-label="Decrease Value"
        class="ant-input-number-handler ant-input-number-handler-down"
        role="button"
        unselectable="unselectable"
      >
        <span
          aria-label="down"
          class="anticon anticon-down ant-input-number-handler-down-inner"
          role="img"
        >
          <svg
            aria-hidden="true"
            class=""
            data-icon="down"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
            />
          </svg>
        </span>
      </span>
    </div>
    <div
      class="ant-input-number-input-wrap"
    >
      <input
        aria-valuemax="100000"
        aria-valuemin="1"
        aria-valuenow="3"
        autocomplete="off"
        class="ant-input-number-input"
        max="100000"
        min="1"
        role="spinbutton"
        step="1"
        value="3"
      />
    </div>
  </div>
</div>
`;
